--- a/user_auth/templates/register.html
+++ b/user_auth/templates/register.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="{% static 'css/register.css' %}">
+    <link rel="stylesheet" href="../static/css/register.css">
     <script src="../static/js/bootstrap.js"></script>
 
     <title>Register</title>
@@ -48,6 +48,7 @@
                         <div class="form-group mb-3">
                           <label for="roles" class="form-label">Role</label>
                           <select class="form-control" style="gap: 8px; width: 388px; height: 48px; border-radius: 12px; border: 1px solid #D4D7E3;" id="role" name="roles" required>
+                            <option value="" selected disabled hidden>choose role</option>
                             <option value="admin">Admin</option>
                             <option value="petugas_monitor">Petugas Monitor</option>
                             <option value="petugas_agenda_setting">Petugas Agenda Setting</option>
